fixed spacing

--- a/public/muse/css/eligibility.css
+++ b/public/muse/css/eligibility.css
@@ -208,7 +208,8 @@ html
 
 #u306
 {
-	width: 96px;
+	width: 86px;
+	padding-left: 5px;
 	padding-bottom: 33px;
 }
 
